# reactive-order-service

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluff  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.gradle.kts  docker-compose.yml  package.json  pyproject.toml  settings.gradle.kts  sonar-project.local.properties.example  sonar-project.properties
.github/linters/: .linter.yml  .markdownlint.json  .terrascan.toml  .tflint.hcl
.github/workflows/: security-and-lint.yml
docs/architecture/: README.md  architecture.mmd  class-diagram.mmd  index.html  mermaid-config.json  package-lock.json  package.json  render-diagram.mjs  render.mjs  sequence-diagram.mmd
docs/http/: orders.http
infra/postgres/: entrypoint.sh  pg_hba.conf  pg_ident.conf
infra/postgres/init/: 01-create-order-service-role.sql
infra/prometheus/: prometheus.yml
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.local.tfvars  terraform.prod.tfvars.example  variables.tf  versions.tf
infra/terraform/modules/kms/: main.tf  outputs.tf
infra/terraform/modules/msk/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vault/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vault-pki/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
scripts/: dev-down.sh  dev-up.sh  sonar-local.sh
src/main/resources/: application-test.yml  application.yml
src/test/resources/: application.yml
(+27 files in other folders)
