[tool.poetry]
name = "reactive-order-service"
version = "0.1.0"
description = "A high-performance, non-blocking order management microservice built with Kotlin and Reactive Programming."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15" # Adjusted Python version to include 3.14

[tool.poetry.group.dev.dependencies]
# Development dependencies will go here
pre-commit = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
